feat(thesis): daily update

--- a/bib/mybib.bib
+++ b/bib/mybib.bib
@@ -6,6 +6,7 @@
   year       = {2023},
   copyright  = {© 2023 Wolfgang Ahnert and Dirk Noy},
   isbn       = {978-1-032-11518-4 (hbk)},
+  pages      = {12--842},
   doi        = {10.4324/9781003220268},
   typeset    = {Goudy},
   typesetter = {Newgen Publishing UK}
@@ -25,6 +26,19 @@
   typeset    = {Giovanni},
   typesetter = {Apex CoVantage, LLC}
 }
+
+@book{AOIP2010,
+  title      = {Audio over IP: Building Pro AoIP Systems with Livewire},
+  author     = {Skip Pizzi and Steve Church},
+  publisher  = {Focal Press, an imprint of Elsevier},
+  address    = {30 Corporate Drive, Suite 400, Burlington, MA 01803, USA and Linacre House, Jordan Hill, Oxford OX2 8DP, UK},
+  year       = {2010},
+  copyright  = {© 2010 ELSEVIER Inc. All rights reserved.},
+  isbn       = {978-0-240-81244-1},
+  typeset    = {Goudy},
+  typesetter = {Newgen Publishing UK}
+}
+
 
 @manual{DISPLAY23USERGUIDE,
   title  = {Display v2.3 USER GUIDE v1.5},
