--- a/content/system_desing.tex
+++ b/content/system_desing.tex
@@ -523,9 +523,23 @@ Az időszinkronizáció kulcsfontosságú élőzenei produkcióknál.
 %----------------------------------------------------------------------------
 \subsection{Cardioid mélyláda rendszer mérése}
 %----------------------------------------------------------------------------
+A rendszermérések elkészítésére a Rational Acoustics által fejlesztett Smaart nevű szoftvert fogom használni, mivel
+az iparágban ez a legelterjedtebb és legmegbízhatóbb szoftver a mérések pontos elvégzésére.
+A szoftver legújabb verzióját fogom használni, ami az írás pillanatában a 'Smaart Suite 9.2.1' verzió.
+Első lépésben a számítógéphez csatlakoztatott hangkártyát kell konfigurálni, hogy el tudjunk kezdeni méréseket végezni.
+Jelen esetben a hangkártya egy 'Focusrite Scarlett 2i2' típusú interfész lesz, ami egy USB-s csatlakozással kapcsolódik a géphez.
+A mérőmikrofon egy 'XYZ' típusú mérőmikrofon lesz, ami XLR csatlakozóval kapcsolódik a hangkártyához, valamit a hangkártya
+kimeneti csatornája szintén XLR csatlakozással kapcsolódik a már részletesebben bemutatott Allen \& Heath SQ-6 digitális keverőrendszerhez.
+Az első mérés amit végezni fogok a rendszeren a mélyláda rendszer mérése lesz.
+Fontos, hogy a mérési környezet a lehetőségekhez mérten minél csendesebb legyen, valamint
+ne legyenek olyan tárgyak a nézőtéren, amelyek a rendszer elő működése közben
+nem lesznek jelen és mérés közben a mért hangot visszaverik.
+
+
 %----------------------------------------------------------------------------
 \subsection{Mélyláda és Line Array fázishelyesség}
 %----------------------------------------------------------------------------
+Mivel a mélyláda rendszer és a Main PA egymástól egy adott távolságra vannak, fontos, hogy a két rendszer fázishelyes legyen.
 %----------------------------------------------------------------------------
 \subsection{Rendszer hangnyomás szint és frekvencia átvitel mérése}
 %----------------------------------------------------------------------------
